@@ -1,8 +1,10 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tcldom/tcldom-3.1.ebuild,v 1.2 2006/06/03 19:56:32 matsuu Exp $
 
-inherit eutils
+EAPI="2"
+
+inherit eutils multilib
 
 DESCRIPTION="Document Object Model For Tcl"
 HOMEPAGE="http://tclxml.sourceforge.net/tcldom.html"
@@ -17,11 +19,10 @@ DEPEND=">=dev-lang/tcl-8.3.3
 	>=dev-tcltk/tcllib-1.2
 	~dev-tcltk/tclxml-3.1
 	expat? ( dev-libs/expat )"
+RDEPEND="${DEPEND}"
 
-src_unpack() {
-	unpack ${A}
-
-	cd "${S}/library"
+src_prepare() {
+	cd library
 	sed -e "s/@VERSION@/${PV}/" \
 		-e "s/@Tcldom_LIB_FILE@@/UNSPECIFIED/" \
 		< pkgIndex.tcl.in > pkgIndex.tcl
@@ -30,20 +31,27 @@ src_unpack() {
 	sed -i -e "s/relid'/relid/" "${S}"/*/{configure,tcl.m4} || die
 }
 
-src_compile() {
-	local myconf=""
+src_configure() {
+	local myconf="--with-tcl=/usr/$(get_libdir)"
 
 	use threads && myconf="${myconf} --enable-threads"
 
 	if use xml ; then
 		cd "${S}/src-libxml2"
-		econf ${myconf} || die
-		emake || die
+		econf ${myconf} --with-libxml2-lib=/usr/$(get_libdir)
 	fi
 	if use expat ; then
 		cd "${S}/src"
-		econf ${myconf} || die
-		emake || die
+		econf ${myconf}
+	fi
+}
+
+src_compile() {
+	if use xml ; then
+		emake -C "${S}"/src-libxml2 || die
+	fi
+	if use expat ; then
+		emake -C "${S}/src" || die
 	fi
 }
 
@@ -53,11 +61,11 @@ src_install() {
 
 	if use xml ; then
 		cd "${S}/src-libxml2"
-		make DESTDIR="${D}" install || die
+		emake DESTDIR="${D}" install || die
 	fi
 	if use expat ; then
 		cd "${S}/src"
-		make DESTDIR="${D}" install || die
+		emake DESTDIR="${D}" install || die
 	fi
 
 	cd "${S}"
