@@ -1,6 +1,12 @@
 # ChangeLog for dev-tcltk/tcldom
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tcldom/ChangeLog,v 1.11 2007/02/22 01:31:38 peper Exp $
+
+  22 Oct 2009; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> tcldom-2.6.ebuild, tcldom-3.0.ebuild,
+  tcldom-3.1.ebuild:
+  concvererted to EAPI="2", fix ./configure problem on multilib
+  https://bugs.gentoo.org/290090
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
